--- a/sample/pom.xml
+++ b/sample/pom.xml
@@ -45,6 +45,12 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.persistence</groupId>
+			<artifactId>javax.persistence-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
