Add annotations and SQL Script

--- a/sample/src/main/resources/application.properties
+++ b/sample/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.url=jdbc:h2:mem:dc0228e7-8b5d-4b29-bf2b-b4aa17bed532
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+spring.jpa.defer-datasource-initialization=true
